@@ -1,5 +1,6 @@
 0.0.5
-Passeword in connection box shows bullets.
+Added templates to menu, templates are in ~/Tempplates.
+Password in connection box shows bullets.
 Connection details now remembered after quit.
 Added new connection dialog.
 Fixed '//' in filepaths when '/' is current folder.
